changed to Hi, I am Wenhsuan

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ summary {
 <div id="TOC">
 <ul>
 <li><a href="#about-the-project">About the project</a></li>
-<li><a href="#hi-my-name-is-wenhsuan">Hi, My Name is Wenhsuan!</a></li>
+<li><a href="#hi-i-am-wenhsuan">Hi, I am Wenhsuan!</a></li>
 <li><a href="#insert-chapter-2-title-here">Insert chapter 2 title here</a></li>
 </ul>
 </div>
@@ -195,8 +195,8 @@ summary {
 <h1>About the project</h1>
 <p><em>Write a short description about the course and add a link to your GitHub repository here. This is an R Markdown (.Rmd) file so you can use R Markdown syntax.</em></p>
 </div>
-<div id="hi-my-name-is-wenhsuan" class="section level1">
-<h1>Hi, My Name is Wenhsuan!</h1>
+<div id="hi-i-am-wenhsuan" class="section level1">
+<h1>Hi, I am Wenhsuan!</h1>
 <p>I hope that I could learn some <strong>useful techique</strong> with R, and that I could <strong>analysis data</strong> after the semester ends.</p>
 <p>*<a href="https://github.com/shanahung1231/IODS-project">Github repository</a></p>
 <hr />
