--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@ summary {
 <p><strong>Use logistic regression to statistically explore the relationship between your chosen variables and the binary high/low alcohol consumption variable as the target variable.</strong></p>
 <p>I choose “studytime”, “failures”, “goout”, “freetime” as four X variables, and fit them into the model which Y is “high_use” (high/low alcohol consumption). I also separate the data into male and female, in order to dig more into the data. Below are what I found from the model.</p>
 <pre><code>        Estimate Std. Error z value Pr(&gt;|z|)    </code></pre>
-<p>(Intercept) -2.36957 0.62399 -3.797 0.000146 <strong><em> studytime -0.57481 0.16784 -3.425 0.000615 </em></strong> failures 0.19303 0.16899 1.142 0.253334<br />
-goout 0.70490 0.12039 5.855 4.77e-09 *** freetime 0.07209 0.13531 0.533 0.594163</p>
+<p>(Intercept) -2.36957 0.62399 -3.797 0.000146 studytime -0.57481 0.16784 -3.425 0.000615 failures 0.19303 0.16899 1.142 0.253334<br />
+goout 0.70490 0.12039 5.855 4.77e-09 freetime 0.07209 0.13531 0.533 0.594163</p>
 <p>coefficient: (Intercept) studytime failures goout freetime -2.36956938 -0.57481413 0.19303395 0.70489610 0.07209276</p>
 <pre><code>                OR     2.5 %    97.5 %</code></pre>
 <p>(Intercept) 0.09352099 0.0267779 0.3109179 studytime 0.56280947 0.4007339 0.7752293 failures 1.21292398 0.8699068 1.6929038 goout 2.02363642 1.6081702 2.5811264 freetime 1.07475503 0.8240334 1.4026604</p>
